Fixed pre tag spacing

--- a/app/assets/stylesheets/songs.scss
+++ b/app/assets/stylesheets/songs.scss
@@ -63,7 +63,7 @@ input[aria-invalid='true'], textarea[aria-invalid='true'] {
 
 pre {
   word-wrap: break-word; //internet explorer
-  white-space: pre-line;
+  white-space: pre;
 }
 
 .badge {
